--- a/LocationNotificationApp/Info.plist
+++ b/LocationNotificationApp/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>もよりの駅に近づいたことを認識します。</string>
 </dict>
 </plist>
